; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtiff/extr_tif_read.c_TIFFReadEncodedStripGetStripSize.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtiff/extr_tif_read.c_TIFFReadEncodedStripGetStripSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64, i64, i64 }

@TIFFReadEncodedStripGetStripSize.module = internal constant [21 x i8] c"TIFFReadEncodedStrip\00", align 16
@.str = private unnamed_addr constant [33 x i8] c"%lu: Strip out of range, max %lu\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_7__*, i64, i64*)* @TIFFReadEncodedStripGetStripSize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @TIFFReadEncodedStripGetStripSize(%struct.TYPE_7__* %0, i64 %1, i64* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64* %2, i64** %7, align 8
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 1
  store %struct.TYPE_6__* %15, %struct.TYPE_6__** %8, align 8
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %17 = call i32 @TIFFCheckRead(%struct.TYPE_7__* %16, i32 0)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %3
  store i64 -1, i64* %4, align 8
  br label %86

20:                                               ; preds = %3
  %21 = load i64, i64* %6, align 8
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = icmp sge i64 %21, %24
  br i1 %25, label %26, label %35

26:                                               ; preds = %20
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = load i64, i64* %6, align 8
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = call i32 @TIFFErrorExt(i32 %29, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @TIFFReadEncodedStripGetStripSize.module, i64 0, i64 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i64 %30, i64 %33)
  store i64 -1, i64* %4, align 8
  br label %86

35:                                               ; preds = %20
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  store i64 %38, i64* %9, align 8
  %39 = load i64, i64* %9, align 8
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 2
  %42 = load i64, i64* %41, align 8
  %43 = icmp sgt i64 %39, %42
  br i1 %43, label %44, label %48

44:                                               ; preds = %35
  %45 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %45, i32 0, i32 2
  %47 = load i64, i64* %46, align 8
  store i64 %47, i64* %9, align 8
  br label %48

48:                                               ; preds = %44, %35
  %49 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %50 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %49, i32 0, i32 2
  %51 = load i64, i64* %50, align 8
  %52 = load i64, i64* %9, align 8
  %53 = call i64 @TIFFhowmany_32_maxuint_compat(i64 %51, i64 %52)
  store i64 %53, i64* %10, align 8
  %54 = load i64, i64* %6, align 8
  %55 = load i64, i64* %10, align 8
  %56 = srem i64 %54, %55
  store i64 %56, i64* %11, align 8
  %57 = load i64*, i64** %7, align 8
  %58 = icmp ne i64* %57, null
  br i1 %58, label %59, label %64

59:                                               ; preds = %48
  %60 = load i64, i64* %6, align 8
  %61 = load i64, i64* %10, align 8
  %62 = sdiv i64 %60, %61
  %63 = load i64*, i64** %7, align 8
  store i64 %62, i64* %63, align 8
  br label %64

64:                                               ; preds = %59, %48
  %65 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %66 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %65, i32 0, i32 2
  %67 = load i64, i64* %66, align 8
  %68 = load i64, i64* %11, align 8
  %69 = load i64, i64* %9, align 8
  %70 = mul nsw i64 %68, %69
  %71 = sub nsw i64 %67, %70
  store i64 %71, i64* %12, align 8
  %72 = load i64, i64* %12, align 8
  %73 = load i64, i64* %9, align 8
  %74 = icmp sgt i64 %72, %73
  br i1 %74, label %75, label %77

75:                                               ; preds = %64
  %76 = load i64, i64* %9, align 8
  store i64 %76, i64* %12, align 8
  br label %77

77:                                               ; preds = %75, %64
  %78 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %79 = load i64, i64* %12, align 8
  %80 = call i64 @TIFFVStripSize(%struct.TYPE_7__* %78, i64 %79)
  store i64 %80, i64* %13, align 8
  %81 = load i64, i64* %13, align 8
  %82 = icmp eq i64 %81, 0
  br i1 %82, label %83, label %84

83:                                               ; preds = %77
  store i64 -1, i64* %4, align 8
  br label %86

84:                                               ; preds = %77
  %85 = load i64, i64* %13, align 8
  store i64 %85, i64* %4, align 8
  br label %86

86:                                               ; preds = %84, %83, %26, %19
  %87 = load i64, i64* %4, align 8
  ret i64 %87
}

declare dso_local i32 @TIFFCheckRead(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @TIFFErrorExt(i32, i8*, i8*, i64, i64) #1

declare dso_local i64 @TIFFhowmany_32_maxuint_compat(i64, i64) #1

declare dso_local i64 @TIFFVStripSize(%struct.TYPE_7__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
